# Fast_API_Training

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pp.py  pyproject.toml  requirements.txt  test.db
api/: db.py  models.py  router.py
tests/: conftest.py  test_main.py  test_router.py
